[package]
name = "bitmask-enum"
version = "1.0.0"
authors = ["Lukas3674"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A bitmask enum attribute macro"
keywords = ["bitmask", "bit", "mask", "enum", "attribute", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
