[package]
name = "bitmask-enum"
version = "1.1.0"
authors = ["Lukas3674 <lukashassler.lh@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/Lukas3674/rust-bitmask-enum"
documentation = "https://docs.rs/bitmask-enum"
license = "MIT OR Apache-2.0"
description = "A bitmask enum attribute macro"
keywords = ["bitmask", "enum", "macro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
