[package]
name = "bitmask-enum"
version = "2.2.0"
authors = ["Lukas3674 <lukashassler@web.de>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/Lukas3674/rust-bitmask-enum"
documentation = "https://docs.rs/bitmask-enum"
license = "MIT OR Apache-2.0"
description = "A bitmask enum attribute macro"
keywords = ["bit", "bitmask", "bitflags", "flags", "no-std"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
